  * Notifications: Handle NULL aggregate_identifier
  * Tableformat: Handle NULL extra
  * SQL/Database:
    * Add `ON DELETE CASCADE` to the foreign keys of table `directives` (#50)
      that allows deleting data from tables events and sent without manually
      deleting the corresponding entries from the directives.
  * intelmqcbmail tool:
    * in verbose mode, also print the event IDs.
    * New parameter `--batch-size` (#55).

 -- Sebastian Wagner <sebix@sebix.at>  Tue, 10 Jun 2025 16:06:05 +0200

intelmq-mailgen (1.3.8-1) stable; urgency=medium

  * notifications:
    * allow to pass an existing ticket number to mail_format_as_csv
    * allow to skip marking an email as sent (for reusing a ticket number)
    * add example script to add bcc contacts

 -- Sebastian Wagner <swagner@intevation.de>  Wed, 04 Jun 2025 14:21:14 +0200

intelmq-mailgen (1.3.7-1) stable; urgency=medium

  * cli interface:
    * do not commit the directive to db if only in preview-mode
    * better error message when format scripts did not generate a notification
    * in Dry runs and debug logging level, also log envelop to addresses if set
  * notifications:
    * allow for different envelope-to than header-to in mail_format_as_csv and EmailNotification
  * Packaging:
    * Add GitHub Workflows to build Debian Package for Debian 11 and Debian 12
    * Fix Build for Debian 12 / Ubuntu 24.04 (#47)
  * Documentation:
    * Include the README in the rendered documentation, converted to RST
    * Add conceptual overview graphics and some texts
    * add database schema visualization
    * convert sql/updates to markdown for readability
  * SQL/Database:
    * Fix script to create Type `ip_endpoint` as superuser
    * use JSONB of events.extra
      IntelMQ's eventdb events.extra switched from type JSON to JSONB:
      https://github.com/certtools/intelmq/pull/2597
      directly use the JSONB type in the functions
  * github workflows: